# nearai-contract-example

./: Cargo.toml  build_local.sh
src/: events.rs  lib.rs
